# tapis

./: pyproject.toml  setup.py
scripts/: cleanAlignments.py  run_tapis.py
tapis/: enums.py  settings.py  tags.py
tapis/models/: __init__.py  read_tags.py
tapis/topology/: __init__.py  enums.py  events.py  filtering.py  graph.py  reporting.py
tests/: test_filtering.py  test_tags_and_settings.py  test_topology_bam_integration.py  test_topology_engine.py  test_topology_reporting.py
