[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "tapis"
version = "1.1.3"
description = "Transcriptome Analysis Pipeline for Isoform Sequencing"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "GPL-3.0-or-later"
authors = [
  { name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" },
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "pysam>=0.22",
  "bx-python>=0.9",
  "tqdm>=4.66",
  "networkx>=3.4.2",
  "pydantic>=2.12.5",
  "scikit-learn>=1.7.2",
]

[project.urls]
Homepage = "https://github.com/bio-comp/tapis"
Repository = "https://github.com/bio-comp/tapis"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tapis"]

[tool.hatch.build.targets.wheel.force-include]
"tapis/py.typed" = "tapis/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/contributors.txt",
  "/doc",
  "/scripts",
  "/tapis",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["doc/TAPIS.pdf"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
